--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -19,7 +19,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-128.png">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon-128.png" />
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Condensed:300,300i,400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+
+    <title>Numizmatyka</title>
+
+    <meta name="author" content="ApusArt • Oprogramowanie • Raszczukowie" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="application-name" content="ApusArt • Oprogramowanie • Raszczukowie" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ApusArt Numizmatyka" />
+    <meta property="og:description" content="Encyklopedia Numizmatyczna Świata" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:locale" content="pl_PL" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
