--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto+Condensed:300,300i,400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
-    <title>Numizmatyczny Atlas Świata</title>
+    <title>Numizmatyczny Atlas Świata - Apusart Numido</title>
 
+    <meta name="application-name" content="Numizmatyczny Atlas Świata - Apusart Numido" />
+    <meta name="description" content="Numizmatyczny Atlas Świata - Apusart Numido" />
     <meta name="author" content="ApusArt • Oprogramowanie • Raszczukowie" />
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="application-name" content="Numizmatyczny Atlas Świata" />
+    <meta name="keywords" content="Numizmatyka, Numizmoteka" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Numizmatyczny Atlas Świata" />
-    <meta property="og:description" content="Numizmatyczny Atlas Świata" />
+    <meta property="og:title" content="Numizmatyczny Atlas Świata - Apusart Numido" />
+    <meta property="og:description" content="Numizmatyczny Atlas Świata - Apusart Numido" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:locale" content="pl_PL" />
